# rust-chip8

./: Cargo.toml
src/: chip.rs  main.rs
