[package]
name = "chip8"
version = "0.1.0"
authors = ["Jean-Baptiste Gosselin <jbgosselin@synthesio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
env_logger = "0.7"
rand = "0.7"
sdl2 = "0.33"
